--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap" rel="stylesheet">
   <!-- bootstrap theme css -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 
 </head>
 
@@ -22,8 +22,8 @@
   <div id="root"></div>
 
   <!-- script start -->
-  <script src="./js/jquery.min.js"></script>
-  <script src="./js/bootstrap.bundle.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
