--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- bootstrap theme css -->
   <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 
@@ -24,7 +27,6 @@
   <!-- script start -->
   <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
   <script src="%PUBLIC_URL%/js/bootstrap.bundle.min.js"></script>
-
 
 </body>
 
