--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Lighter Clinet Portal" />
+  <meta name="description" content="Lighter Client Portal" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
-  <title>Lighter Clinet Portal</title>
+  <title>Lighter Client Portal</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap" rel="stylesheet">
